<resources>
    <string name="app_name">MenuApp</string>

    <string name="welcome_message">Welcome to our restaurant</string>

    <string name="menu">Menu</string>
    <string name="feedback">Feedback</string>
    <string name="language">Language</string>
    <string name="background" translatable="false">Background</string>

    <!--Languages-->
    <string name="arabic">Arabic</string>
    <string name="english">English</string>

    <!--Menu Item Test Attribute-->
    <string name="menu_item_title">URA GRILLED SALMON</string>
    <string name="menu_item_price">30.00</string>
    <string name="menu_item_description">Grilled Salmon, Cucumber, Topped with Sesame Seeds &amp; Teriyaki</string>
</resources>
