<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="horizontal"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:src="@drawable/app_icon" />

        <ExpandableListView
            android:id="@+id/typesListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight=".15"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageButton
                android:id="@+id/feedBackAction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/feedback"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:onClick="goToFeedBackActivity"
                android:src="@drawable/feedback" />

            <ImageButton
                android:id="@+id/langAction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/language"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:onClick="backToMainActivity"
                android:src="@drawable/language_icon" />

            <ImageButton
                android:id="@+id/menuAction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/menu"
                android:padding="5dp"
                android:scaleType="fitXY"
                android:onClick="backToMainActivity"
                android:src="@drawable/restaurant_active" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/menuBackgroundImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        android:src="@drawable/main_image"
        android:visibility="gone" />

    <GridView
        android:id="@+id/foodGridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/background"
        android:horizontalSpacing="30dp"
        android:numColumns="3"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="right"
        android:verticalSpacing="30dp" />
</LinearLayout>
